Fixed bug #38989 (Absolute path with slash at beginning doesn't work on win)